css/signup.css
/* ... */
.sign-up-bottom {
    position: absolute;
    width: 390px;
    height: 17px;
    left: 0px;
    top: 827px;
    border-radius: 10px;
    background: #FFFFFF;
    z-index: 1000;
}

.white-form {
    position: absolute;
    width: 390px;
    height: 573px;
    left: 0px;
    top: 271px;
    z-index: 1000;
}

.sign-up-title {
    position: absolute;
    width: 126px;
    height: 52px;
    left: 30px;
    top: 300px;
    font-family: DM Serif Display;
    font-style: normal;
    font-weight: normal;
    font-size: 38px;
    line-height: 52px;
    color: #030735;
    z-index: 1000;
}

.yellow-dog {
    position: absolute;
    width: 53.3px;
    height: 138px;
    left: 34px;
    top: 135px;
    z-index: 1000;
}

.weenie-dog {
    position: absolute;
    width: 54.74px;
    height: 87px;
    left: 113px;
    top: 189px;
    z-index: 1000;
}

.terrier {
    position: absolute;
    width: 57.26px;
    height: 91px;
    left: 170px;
    top: 173px;
    z-index: 1000;
}

.logo {
    position: absolute;
    width: 45px;
    height: 40px;
    left: 318px;
    top: 306px;
    z-index: 1000;
}

.phone-entry {
    position: absolute;
    width: 326px;
    height: 61px;
    left: 30px;
    top: 368px;
}

.name-entry {
    position: absolute;
    width: 326px;
    height: 61px;
    left: 30px;
    top: 449px;
}

.media {
    position: absolute;
    width: 326px;
    height: 75px;
    left: 30px;
    top: 734px;
    z-index: 1000;
}

.login-link {
    position: absolute;
    left: 21.03%;
    right: 21.03%;
    top: 81.87%;
    bottom: 14.93%;
    font-family: Manrope;
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 27px;
    text-align: center;
    color: #000000;
    z-index: 1000;
}

.entry-inside {
    position: absolute;
    left: 0%;
    right: 0%;
    top: 57.38%;
    bottom: 0.82%;
    z-index: 1000;
}

.password-entry {
    position: absolute;
    width: 326px;
    height: 61px;
    left: 30px;
    top: 530px;
    z-index: 1000;
}

.in-content {
    position: absolute;
    left: 0%;
    top: 8%;
    font-family: Manrope;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 19px;
    color: #908E94;
    z-index: 1000;
}

.in-line {
    position: absolute;
    left: 0%;
    right: 0%;
    top: 99.18%;   
    bottom: 0.82%;
    border: 1px solid #908E94;
    z-index: 1000;
}

.sub-title {
    position: absolute;
    left: 0%;
    top: 0%;
    bottom: 55.74%;
    font-family: Manrope;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 27px;
    color: #030735;
    z-index: 1000;
}

.eye {
    position: absolute;
    width: 24px;
    height: 24px;
    left: 332px;
    top: 566px;
}

.button {
    position: absolute;
    width: 326px;
    height: 60px;
    left: 32px;
    top: 615px;
    background: linear-gradient(180deg, #73A9E8 0%, #549AEC 100%);
    box-shadow: 0px 4px 10px 2px rgba(147, 201, 250, 0.25);
    border-radius: 12px;
    z-index: 1000;
}

.sign-up-button {
    position: relative;
    width: 75px;
    height: 27px;
    top: -3px;
    width: 342px;
    height: 27px;
    text-align: center;
    font-family: Manrope;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 27px;  
    color: #FFFFFF;
    z-index: 1000;
}

.centered-logo {
    position: absolute;
    width: 45px;
    height: 40px;
    left: 173px;
    top: 52px;
}

.id-title {
    position: absolute;
    width: 342px;
    height: 88px;
    left: 24px;
    top: 60px;
}

.sign-up-header {
    font-family: DM Serif Display;
    font-style: normal;
    font-weight: normal;
    font-size: 38px;
    line-height: 44px;
    color: #030735;
}

.sign-up-text {
    font-family: Manrope;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    color: #030735;
}

.upload-gov-id {
    position: absolute;
    left: 6.15%;
    right: 6.15%;
    top: 192px;
    bottom: 70.38%;
    font-family: Manrope;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    color: #030735;
}

.id-text {
    position: absolute;
    left: 6.15%;
    right: 6.15%;
    top: 23.22%;
    bottom: 70.38%;
    font-family: Manrope;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    color: #030735;
}

.id-img {
    position: absolute;
    left: 6.15%;
    right: 6.15%;
    top: 262px;
    bottom: 47.63%;
    border: 0.5px solid #B6B6B9;
    box-sizing: border-box;
    filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.05));
    border-radius: 16px;
}

.upload-photo {
    position: absolute;
    left: 6.15%;
    right: 6.15%;
    top: 54.74%;
    bottom: 38.86%;
    font-family: Manrope;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    color: #030735;
}

.photo-img {
    position: absolute;
    left: 6.15%;
    right: 6.15%;
    top: 62.56%;
    bottom: 16.11%;
    border: 0.5px solid #B6B6B9;
    box-sizing: border-box;
    filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.05));
    border-radius: 16px;
}

.next-page {
    position: absolute;
    width: 342px;
    height: 60px;
    left: 24px;
    top: 732px;
    background: linear-gradient(180deg, #73A9E8 0%, #549AEC 100%);
    box-shadow: 0px 4px 10px 2px rgba(147, 201, 250, 0.25);
    border-radius: 12px;
}

.middle-logo {
    position: absolute;
    width: 45px;
    height: 40px;
    left: 173px;
    top: 330px;
}

.center-text {
    position: absolute;
    width: 342px;
    height: 44px;
    left: 24px;
    top: 378px;
    font-family: DM Serif Display;
    font-style: normal;
    font-weight: normal;
    font-size: 38px;
    line-height: 44px;
    text-align: center;
    color: #030735;
}
/* ... */

